--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mongoose": "^4.11.1",
-    "q": "^1.5.0"
+    "q": "^1.5.0",
+    "requirejs": "^2.3.4"
   },
   "devDependencies": {},
   "scripts": {
