--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "angular-route": "^1.6.5",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "jquery": "^3.2.1",
+    "jqueryui": "^1.11.1",
     "mongoose": "^4.11.1",
     "q": "^1.5.0",
     "requirejs": "^2.3.4"
