--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.2.1",
     "jqueryui": "^1.11.1",
     "mongoose": "^4.11.1",
+    "multer": "^1.3.0",
     "q": "^1.5.0",
     "requirejs": "^2.3.4"
   },
